@@ -251,14 +251,15 @@ function InitControls()
   MangAdmin:PrepareScript(ma_gobmodelrotaterbutton, Locale["tt_RotateRight"]        , function() GobModelRotateRight() end)
   MangAdmin:PrepareScript(ma_gobmodelzoominbutton , Locale["tt_modelzoominbutton"]  , function() GobModelZoomIn() end)
   MangAdmin:PrepareScript(ma_gobmodelzoomoutbutton, Locale["tt_modelzoomoutbutton"] , function() GobModelZoomOut() end)
-  
-  MangAdmin:PrepareScript(ma_gobmoveforwardbutton , "Move forward" , function() DMFront() end)
-  MangAdmin:PrepareScript(ma_gobmovebackbutton , "Move back" , function() DMBack() end)
-  MangAdmin:PrepareScript(ma_gobmoveleftbutton , "Move left" , function() DMLeft() end)
-  MangAdmin:PrepareScript(ma_gobmoverightbutton , "Move right" , function() DMRight() end)
-  MangAdmin:PrepareScript(ma_gobmoveupbutton , "Move up" , function() DMUP() end)
-  MangAdmin:PrepareScript(ma_gobmovedownbutton , "Move down" , function() DMDown() end)
-  MangAdmin:PrepareScript(ma_gobspawnherebutton, "Spawn here" , function() DMSS2() end)
+  MangAdmin:PrepareScript(ma_gobmoveforwardbutton , "Move forward"                  , function() DMFront() end)
+  MangAdmin:PrepareScript(ma_gobmovebackbutton    , "Move back"                     , function() DMBack() end)
+  MangAdmin:PrepareScript(ma_gobmoveleftbutton    , "Move left"                     , function() DMLeft() end)
+  MangAdmin:PrepareScript(ma_gobmoverightbutton   , "Move right"                    , function() DMRight() end)
+  MangAdmin:PrepareScript(ma_gobmoveupbutton      , "Move up"                       , function() DMUP() end)
+  MangAdmin:PrepareScript(ma_gobmovedownbutton    , "Move down"                     , function() DMDown() end)
+  MangAdmin:PrepareScript(ma_gobspawnherebutton   , "Spawn here"                    , function() DMSS2() end)
+  MangAdmin:PrepareScript(ma_spawnonmovecheck     , ""                              , function() CheckToggle("spawn") end)
+  MangAdmin:PrepareScript(ma_moveonmovecheck      , ""                              , function() CheckToggle("move") end)
 
 --[[Tele Tab]]
   MangAdmin:PrepareScript(ma_ContScrollBarEntry1  , nil , function() MangAdmin.db.char.selectedCont = "EK_N"; cont=MangAdmin.db.char.selectedCont; TeleScrollUpdate() end)
